# ekstend

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugins/database/.claude-plugin/: plugin.json
plugins/database/skills/database/: SKILL.md
plugins/interview/: AGENTS.md  README.md
plugins/interview/.claude-plugin/: plugin.json
plugins/interview/skills/interview/: SKILL.md
plugins/interview/skills/interview/references/: question-categories.md
plugins/mysql-db/: AGENTS.md  CLAUDE.md  README.md
plugins/mysql-db/.claude-plugin/: plugin.json
plugins/mysql-db/skills/mysql-db/: SKILL.md
plugins/postgres-cli/: AGENTS.md  README.md
plugins/postgres-cli/.claude-plugin/: plugin.json
plugins/postgres-cli/skills/postgres-cli/: SKILL.md
plugins/postgres-db/: AGENTS.md  README.md
plugins/postgres-db/.claude-plugin/: plugin.json
plugins/postgres-db/skills/postgres-db/: SKILL.md
plugins/skill-creator/: AGENTS.md  README.md
plugins/skill-creator/.claude-plugin/: plugin.json
plugins/skill-creator/skills/skill-creator/: SKILL.md
plugins/ultrathink/: AGENTS.md  README.md
plugins/ultrathink/.claude-plugin/: plugin.json
plugins/ultrathink/skills/ultrathink/: .coverage  REFERENCE.md  SKILL.md  test_ultrathink.py  ultrathink.py
plugins/ultrathink/skills/ultrathink/references/: REFERENCE.md
plugins/ultrathink/skills/ultrathink/scripts/: ultrathink.py
plugins/ultrathink/skills/ultrathink/tests/: test_ultrathink.py
