[project]
name = "ekstend"
version = "1.3.0"
description = "A collection of plugins for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Husni Adil Makmur", email = "husniadil@gmail.com" }]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
# skill-creator scripts contain template strings that need long lines
"plugins/skill-creator/skills/skill-creator/scripts/*.py" = [
    "E501",     # Line too long (template strings)
    "PLR0911",  # Too many return statements (validation logic)
    "PLR0912",  # Too many branches (validation logic)
]

[tool.ruff.lint.isort]
known-first-party = ["plugins"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
]

[[tool.mypy.overrides]]
module = ["typer.*", "pydantic.*", "pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["test_ultrathink"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# skill-creator scripts from Anthropic don't have type annotations
module = [
    "init_skill",
    "quick_validate",
    "package_skill",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["plugins"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["plugins"]
omit = ["*/test_*.py", "*/*_test.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
